[gd_scene load_steps=5 format=3 uid="uid://hcshq6ex0ptu"]

[ext_resource type="Script" uid="uid://cfj2rcsa13hgv" path="res://Scripts/overlay_menu.gd" id="1_3anos"]
[ext_resource type="Texture2D" uid="uid://dd11hfiitt61v" path="res://Assets/UI/Pause menu/pause_menu_fotnas.png" id="2_bdg5b"]
[ext_resource type="Texture2D" uid="uid://d32d4ilm2v486" path="res://Assets/UI/Pause menu/pause_menu_mygtukai.png" id="3_xplrn"]
[ext_resource type="Theme" uid="uid://dfh7fbwsij8h2" path="res://Assets/UI/Main_menu/buttons.tres" id="4_m77x5"]

[node name="Overlay_menu" type="Control"]
process_mode = 3
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3anos")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1924.0
offset_bottom = 1086.0
color = Color(0, 0, 0, 0.647059)

[node name="PauseMenuFotnas" type="Sprite2D" parent="."]
position = Vector2(962.111, 540.75)
scale = Vector2(0.500231, 0.500232)
texture = ExtResource("2_bdg5b")

[node name="PauseMenuMygtukai" type="Sprite2D" parent="."]
position = Vector2(961, 541)
scale = Vector2(0.502083, 0.502083)
texture = ExtResource("3_xplrn")

[node name="Main_menu" type="Button" parent="."]
layout_mode = 2
offset_left = 695.0
offset_top = 341.0
offset_right = 1248.0
offset_bottom = 464.0
theme = ExtResource("4_m77x5")

[node name="Level_selection" type="Button" parent="."]
layout_mode = 2
offset_left = 759.0
offset_top = 528.0
offset_right = 1187.0
offset_bottom = 651.0
theme = ExtResource("4_m77x5")

[node name="Settings" type="Button" parent="."]
layout_mode = 2
offset_left = 727.0
offset_top = 710.0
offset_right = 1211.0
offset_bottom = 830.0
theme = ExtResource("4_m77x5")

[connection signal="pressed" from="Main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Level_selection" to="." method="_on_level_selection_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
